# PUBG-Mortar-Calculator

./: .gitignore  README.md  main.py  main.ui  png_to_jpg.py  pyproject.toml  settings.json
.VSCodeCounter/2026-02-17_09-46-18/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.md  results.txt
assets/: mortar_distances.txt
code/: app.py  custom_widgets.py  grid.py  main.py  profile_loader.py  settings_loader.py  tools.py  window.py
models/: corrector_model.onnx
pubg_mortar_calculator/: annotation_tool.py  app.py  app_logic.py  custom_widgets.py  dictor_manager.py  grid_detector.py  height_detector.py  main.py  map_detector.py  mark_detector.py  sample_loader.py  sample_manager.py  settings_loader.py  train.py  utils.py
pubg_mortar_calculator/detectors/: __init__.py  grid_detector.py  height_detector.py  map_detector.py  mark_detector.py
pubg_mortar_calculator/ui/blocks/: calculation_data_block.py  dictor_settings_block.py  map_detector_block.py  titled_block.py
pubg_mortar_calculator/ui/widgets/: __init__.py  checkbox.py  entry.py  slider.py
pubg_mortar_calculator/utils/: __init__.py  image.py  imgpr.py  paths.py
sample/profiles/: Erangel.json  default.json
src/app_overlay/: __init__.py  __main__.py  app_overlay.py  commands.py
src/customtkinter_widgets/: __init__.py  checkbox.py  entry.py  image.py  slider.py  titled_block.py
src/pubg_mortar_calculator/: __init__.py  __main__.py  app_logic.py  dictor_manager.py  elevation_tools.py  logger.py  sample_manager.py  settings_loader.py
src/pubg_mortar_calculator/detectors/: __init__.py  grid_detector.py  height_detector.py  map_detector.py  mark_detector.py  yolov8_onnx_detector.py
src/pubg_mortar_calculator/ui/: app.py
src/pubg_mortar_calculator/ui/blocks/: __init__.py  calculation_data_block.py  dictor_settings_block.py  elevation_detector_block.py  general_settings_block.py  grid_detector_block.py  map_detector_block.py  overlay_settings_block.py
src/pubg_mortar_calculator/ui/widgets/: combobox.py  slider.py
src/pubg_mortar_calculator/utils/: __init__.py  paths.py  screenshot.py
src/sample_checker/: __main__.py  app_logic.py
src/sample_checker/ui/: app.py
src/sample_checker/ui/blocks/: __init__.py  data_block.py  navigation_block.py
src/yolo11_onnx_detector/: __init__.py  __main__.py  yolo11_onnx_detector.py
tests/: test_grid_detector.py  test_integration.py  test_map_detector.py  test_mark_detector.py
tests/test_samples/: annotation.json
tools/: compress_fixtures_marks.py  comress_fixtures_grids.py  comress_fixtures_maps.py
