[tool.poetry]
name = "pubg-mortar-calculator"
version = "2.7.1"
description = "A tool to calculate the range of a shot or to automatically fire a mortar."
authors = ["IZomBie <patrik009009@gmail.com>"]
license = "You can youse everything."
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
opencv-python = "^4.10.0.84"
mss = "^10.0.0"
screeninfo = "^0.8.1"
customtkinter = "^5.2.2"
pillow = "^11.1.0"
keyboard = "^0.13.5"
pyttsx3 = "^2.98"
mouse = "^0.7.1"
pygetwindow = "^0.0.9"
onnxruntime = "^1.22.1"

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "supplemental"

[tool.poetry.group.train.dependencies]
torch = {source = "pytorch-cu128"}
torchvision = {source = "pytorch-cu128"}
torchaudio = {source = "pytorch-cu128"}
onnx = "^1.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

