[tool.poetry]
name = "pubg_mortar_calculator"
version = "3.0.2"
description = "A tool to calculate the range of a shot for mortar."
authors = ["IZomBie <patrik009009@gmail.com>"]
license = "You can use everything."
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
opencv-python = "^4.10.0.84"
mss = "^10.0.0"
screeninfo = "^0.8.1"
customtkinter = "^5.2.2"
pillow = "^11.1.0"
keyboard = "^0.13.5"
pyttsx3 = "^2.98"
mouse = "^0.7.1"
pygetwindow = "^0.0.9"
pip = "^25.2"
yolov8-onnx = "^1.0.4"

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "supplemental"

[tool.poetry.group.train.dependencies]
torch = { version = "*", source = "pytorch-cu128", optional = true }
torchvision = { version = "*", source = "pytorch-cu128", optional = true }
torchaudio = { version = "*", source = "pytorch-cu128", optional = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
